fix(list): Wrap in feature target.

--- a/packages/mdc-list/_mixins.scss
+++ b/packages/mdc-list/_mixins.scss
@@ -220,7 +220,9 @@
 
   // Only change mouse cursor for interactive list items which are not disabled.
   :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item {
-    cursor: pointer;
+    @include mdc-feature-targets($feat-structure) {
+      cursor: pointer;
+    }
   }
 
   // Override anchor tag styles for the use-case of a list being used for navigation
